# mkdocs-mpgtheme-plugin

./: .gitignore  404.html  LICENSE.txt  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ghpages.yml  pypi.yml  tagging.yml
about/: index.html
assets/mpgtheme/css/: mpg.css
assets/mpgtheme/images/: header-logo-bg.svg.license
de/: index.html
de/about/: index.html
de/faq/: index.html
docs/: index.md
docs/faq/: index.de.md
faq/: index.html
overrides/: main.html
search/: search_index.json
src/mkdocs_mpgtheme_plugin/: plugin.py
src/mkdocs_mpgtheme_plugin/assets/mpgtheme/css/: mpg.css
src/mkdocs_mpgtheme_plugin/mpgtheme/partials/: footer.html  footer_logo.html  footer_navigation.html  header.html  logo.html
